--- a/app/views/layouts/coffee/application.html.haml
+++ b/app/views/layouts/coffee/application.html.haml
@@ -1,7 +1,8 @@
+!!!
 %html
  %head
   %title
-   CupOf
+   CupOfCoffee
   = stylesheet_link_tag :all
   = javascript_include_tag :defaults
   = csrf_meta_tag
