--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,6 +1,6 @@
 %table{:style=>"border=0"}
  %tr
   %td
-   =link_to image_tag('main-cup-of-tea.jpg'), tea_root_path, :id=>'tea_main'
+   =#link_to image_tag('main-cup-of-tea.jpg'), tea_root_path, :id=>'tea_main'
   %td
-   =link_to image_tag('main-cup-of-coffee.jpg'), coffee_root_path, :id=>'coffee_main'
+   =#link_to image_tag('main-cup-of-coffee.jpg'), coffee_root_path, :id=>'coffee_main'
