--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,39 @@
+!!!
 %html
  %head
   %title
-   CupOf
+   CupOfTea
   = stylesheet_link_tag :all
   = javascript_include_tag :defaults
   = csrf_meta_tag
  %body
-  = yield
+  #heading
+   %div{:style=>"text-align:center;"}
+    %div{:style=>"text-align:left;width:368px;height:190px;float:right;background:url(#{image_path('hands-cup-menu.png')});"}
+     %ul{:style=>"list-style-type:none;"}
+      %li
+       = link_to "На главную", root_path
+      %li
+       = link_to "Наши контакты", contacts_path
+      %li
+       = link_to "Кофе", coffee_root_path
+      %li
+       = link_to "Чай", tea_root_path
+      %li Подарки
+      %li Аксессуары
+      %li Регистрация
+      %li Личный кабинет
+      %li Вопросы и ответы
+      %li Доставка и оплата
+      %li Специальные предложения
+      %li Новости
+      %li О чае
+     =#%div{:style=>"float:right;"}
+     =# link_to image_tag('coffee/main-cup-ur.jpg'), coffee_root_path
+    %div{:style=>"float:left;"}
+     = image_tag('left-logo-grdnt.png')
+    %div{:style=>"clear:left;"}
+  %div{:style=>"clear:all;"}
+  #left_column{:style=>"float:left;height:100%;"}
+  #content 
+   = yield
