--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
   = stylesheet_link_tag :all
   = javascript_include_tag :defaults
   = csrf_meta_tag
- %body
+ %body{:style=>"background-color:#fbebd5;"}
   #heading
    %div{:style=>"text-align:center;"}
     %div{:style=>"text-align:left;width:368px;height:190px;float:right;background:url(#{image_path('hands-cup-menu.png')});"}
