--- a/app/views/admin/products/_product_row.html.haml
+++ b/app/views/admin/products/_product_row.html.haml
@@ -1,4 +1,4 @@
 %tr
- %td= link_to product_row.id.to_s, admin_edit_product(product_row) 
+ %td= link_to product_row.id.to_s, edit_admin_product_path(product_row) 
  %td= product_row.name
  %td= product_row.description
