--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,6 +1,7 @@
-%table{:style=>"border=0"}
- %tr
-  %td
-   =#link_to image_tag('main-cup-of-tea.jpg'), tea_root_path, :id=>'tea_main'
-  %td
-   =#link_to image_tag('main-cup-of-coffee.jpg'), coffee_root_path, :id=>'coffee_main'
+%p Пузырьки пара с шумом поднимаются в закипающей воде... Немножко заварки, потом еще чуть-чуть... Тепло обволакивает каждую чаинку, а затем...
+%p А затем начинается удивительное таинство... Волшебное рождение  ЧАЯ...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий аромат? Есть ровно 5 минут, чтоб достать красивые фарфоровые чашки и приготовиться к чаепитию.
+%p Сегодня это пуэр. Завтра утром будет жасминовый чай… Или же тонизирующий красный… А может, это будет молочный улун?  Вы хотите чего-то другого? Ищете отличный подарок? Вам сюда, выбирайте СВОЙ ЧАЙ. 
+%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь баночку хорошего чая.  Для дружеской беседы, семейного ужина, приятного одиночества и встречи  рассвета…
+В нашем магазине вы всегда сможете купить полюбившийся вам напиток. Пусть это будет всего несколько грамм, но это будет несколько  грамм действительно качественного и очень вкусного сорта чая. Побалуйте себя и своих близких!
+%p Чашечку чая?
+
