--- a/app/views/admin/products/_product_form.html.haml
+++ b/app/views/admin/products/_product_form.html.haml
@@ -16,6 +16,8 @@
 %div
  = f.label :active, "Показывать"
  = f.check_box :active
- = f.hidden_field :section_id
+%div
+ = f.label :section_id, "Section"
+ = f.select :section_id, options_from_collection_for_select(Section.all, 'id', 'name', @product.section_id)
 %div
  = f.submit "Сохранить"
