--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,68 +43,68 @@
     %td{:style=>"width:220px;max-width:220px;border-right:3px black;font:14px verdana;"}
      %ul.lmenu{:style=>"padding-top:-100px;margin-top:-100px;"}
       %li
-       = link_to "Ароматизированный чай", section_path(Section.find_by_name('Ароматизированный чай'))
+       = link_to "Ароматизированный чай", section_path(Section.find_by_name('Ароматизированный чай').id)
       %ul.lmenu
        %li
-        = link_to "На основе черного", section_path(Section.find_by_name('На основе черного')) 
+        = link_to "На основе черного", section_path(Section.find_by_name('На основе черного').id) 
        %li
-        = link_to "На основе зеленого", section_path(Section.find_by_name('На основе зеленого')) 
+        = link_to "На основе зеленого", section_path(Section.find_by_name('На основе зеленого').id) 
        %li
-        = link_to "Смешанные основы", section_path(Section.find_by_name('Смешанные основы')) 
+        = link_to "Смешанные основы", section_path(Section.find_by_name('Смешанные основы').id) 
        %li
-        = link_to "Чайные напитки", section_path(Section.find_by_name('Чайные напитки')) 
+        = link_to "Чайные напитки", section_path(Section.find_by_name('Чайные напитки').id) 
        %ul.lmenu
         %li
-         = link_to "на основе фруктов", section_path(Section.find_by_name('на основе фруктов')) 
+         = link_to "на основе фруктов", section_path(Section.find_by_name('на основе фруктов').id) 
         %li
-         = link_to "на основе руибоса", section_path(Section.find_by_name('на основе руибоса')) 
+         = link_to "на основе руибоса", section_path(Section.find_by_name('на основе руибоса').id) 
         %li
-         = link_to "на основе полезных растений", section_path(Section.find_by_name('на основе полезных растений')) 
+         = link_to "на основе полезных растений", section_path(Section.find_by_name('на основе полезных растений').id) 
         %li
-         = link_to "на основе мате и лапачо", section_path(Section.find_by_name('на основе мате и лапачо')) 
+         = link_to "на основе мате и лапачо", section_path(Section.find_by_name('на основе мате и лапачо').id) 
         %li
-         = link_to "на основе улуна", section_path(Section.find_by_name('на основе улуна')) 
+         = link_to "на основе улуна", section_path(Section.find_by_name('на основе улуна').id) 
       %li
-       = link_to "Китайский элитный чай", section_path(Section.find_by_name('Китайский элитный чай'))
+       = link_to "Китайский элитный чай", section_path(Section.find_by_name('Китайский элитный чай').id)
       %ul.lmenu
        %li
-        = link_to "Элитный китайский чай в баночках", section_path(Section.find_by_name('Элитный китайский чай в баночках')) 
+        = link_to "Элитный китайский чай в баночках", section_path(Section.find_by_name('Элитный китайский чай в баночках').id) 
        %li
-        = link_to "Белый чай", section_path(Section.find_by_name('Белый чай')) 
+        = link_to "Белый чай", section_path(Section.find_by_name('Белый чай').id) 
        %li
-        = link_to "Желтый чай", section_path(Section.find_by_name('Желтый чай')) 
+        = link_to "Желтый чай", section_path(Section.find_by_name('Желтый чай').id) 
        %li
-        = link_to "Зеленый чай", section_path(Section.find_by_name('Зеленый чай')) 
+        = link_to "Зеленый чай", section_path(Section.find_by_name('Зеленый чай').id) 
        %li
-        = link_to "Красный чай", section_path(Section.find_by_name('Красный чай')) 
+        = link_to "Красный чай", section_path(Section.find_by_name('Красный чай').id) 
        %li
-        = link_to "Жасминовый чай", section_path(Section.find_by_name('Жасминовый чай')) 
+        = link_to "Жасминовый чай", section_path(Section.find_by_name('Жасминовый чай').id) 
        %li
-        = link_to "Пуэры", section_path(Section.find_by_name('Пуэры')) 
+        = link_to "Пуэры", section_path(Section.find_by_name('Пуэры').id) 
        %li
-        = link_to "Улуны материковые (китайские)", section_path(Section.find_by_name('Улуны материковые (китайские)')) 
+        = link_to "Улуны материковые (китайские)", section_path(Section.find_by_name('Улуны материковые (китайские)').id) 
        %li
-        = link_to "Связанный чай", section_path(Section.find_by_name('Связанный чай')) 
+        = link_to "Связанный чай", section_path(Section.find_by_name('Связанный чай').id) 
        %li
-        = link_to "Традиционные чайные напитки", section_path(Section.find_by_name('Традиционные чайные напитки')) 
+        = link_to "Традиционные чайные напитки", section_path(Section.find_by_name('Традиционные чайные напитки').id) 
        %li
-        = link_to "Элитный чай Тайвань", section_path(Section.find_by_name('Элитный чай Тайвань')) 
+        = link_to "Элитный чай Тайвань", section_path(Section.find_by_name('Элитный чай Тайвань').id) 
       %li
-       = link_to "Плантационный индийский и цейлонский чай", section_path(Section.find_by_name('Плантационный индийский и цейлонский чай'))
+       = link_to "Плантационный индийский и цейлонский чай", section_path(Section.find_by_name('Плантационный индийский и цейлонский чай').id)
       %ul.lmenu
        %li
-        = link_to "Плантационный черный чай Индия", section_path(Section.find_by_name('Плантационный черный чай Индия')) 
+        = link_to "Плантационный черный чай Индия", section_path(Section.find_by_name('Плантационный черный чай Индия').id) 
        %li
-        = link_to "Плантационный черный чай Цейлон", section_path(Section.find_by_name('Плантационный черный чай Цейлон')) 
+        = link_to "Плантационный черный чай Цейлон", section_path(Section.find_by_name('Плантационный черный чай Цейлон').id) 
       %li
-       = link_to "Фиточа", section_path(Section.find_by_name('Фиточа')) 
+       = link_to "Фиточа", section_path(Section.find_by_name('Фиточа').id) 
       %li
-       = link_to "Чай в пакетиках", section_path(Section.find_by_name('Чай в пакетиках')) 
+       = link_to "Чай в пакетиках", section_path(Section.find_by_name('Чай в пакетиках').id) 
       %ul.lmenu
        %li
-        = link_to "Чай пакетированный Флёр Деланж", section_path(Section.find_by_name('Чай пакетированный Флёр Деланж'))
+        = link_to "Чай пакетированный Флёр Деланж", section_path(Section.find_by_name('Чай пакетированный Флёр Деланж').id)
       %li
-       = link_to "Японский чай", section_path(Section.find_by_name('Японский чай'))
+       = link_to "Японский чай", section_path(Section.find_by_name('Японский чай').id)
 
 
     %td{:style=>"width:*;vertical-align:top;"}
