--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -1,7 +1,8 @@
 - @products.each do |p|
  %div
-  = image_tag p.cover(:small), :style=>"float:left;padding: 10px;"
+  = link_to(image_tag p.cover(:small), :style=>"float:left;padding: 10px;"), products_path(p.id)
   %h3 #{p.name}
   #{p.short_descr}
+  %div{:style=>"text-align:right;padding-top:15px;"} #{p.price}
   %div{:style=>":height:20px;clear: both;"}
 = will_paginate(@products)
