--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,39 +36,45 @@
    %tr{:style=>"background:url('/images/center-line.jpg') no-repeat;"}
     %td.left_menu{:style=>"font:24px verdana;font-weight:bold;height:43px;vertical-align:top;width:220px;max-width:220px;"}Чай
     %td{:style=>"width:652px;height:152px;background:url(/images/ramka-mordolenta.png);background-position:0px 10px;"}
-     .lenta{:style=>"width:620px;height:100px;vertical-align:center;margin-top:31px;margin-bottom:29px;margin-left:12px;margin-right:12px;"}
+     .lenta{:style=>"width:602px;height:102px;vertical-align:center;margin-top:19px;margin-bottom:1px;margin-left:15px;margin-right:1px;"}
       - @m_items.each do |mord|
-       = image_tag mord.cover(:tiny), :style=>"padding:14px;"
+       = image_tag mord.cover(:mord), :style=>"padding:2px;"
     %td{:style=>"vertical-align:top;width:120px;border-left: 1px black;text-align:center;"}
      = image_tag("korzina2.png")
    %tr
     %td{:style=>"width:220px;max-width:220px;border-right:3px black;font:14px verdana;"}
-     %ul.lmenu{:style=>"padding-top:-100px;margin-top:-100px;"}
+     %ul.lmenu{:class=>"l1", :style=>"padding-top:-100px;margin-top:-100px;"}
       %li
        = link_to "Ароматизированный чай", section_path(Section.find_by_name('Ароматизированный чай').id)
-      %ul.lmenu
+      %ul.lmenu{:class=>"l2"}
        %li
         = link_to "На основе черного", section_path(Section.find_by_name('На основе черного').id) 
        %li
         = link_to "На основе зеленого", section_path(Section.find_by_name('На основе зеленого').id) 
        %li
         = link_to "Смешанные основы", section_path(Section.find_by_name('Смешанные основы').id) 
+      %li
+       = link_to "Чайные напитки", section_path(Section.find_by_name('Чайные напитки').id) 
+      %ul.lmenu{:class=>"l2"}
        %li
-        = link_to "Чайные напитки", section_path(Section.find_by_name('Чайные напитки').id) 
-       %ul.lmenu
-        %li
-         = link_to "на основе фруктов", section_path(Section.find_by_name('на основе фруктов').id) 
-        %li
-         = link_to "на основе руибоса", section_path(Section.find_by_name('на основе руибоса').id) 
-        %li
-         = link_to "на основе полезных растений", section_path(Section.find_by_name('на основе полезных растений').id) 
-        %li
-         = link_to "на основе мате и лапачо", section_path(Section.find_by_name('на основе мате и лапачо').id) 
+        = link_to "на основе фруктов", section_path(Section.find_by_name('на основе фруктов').id) 
+       -#%li
+        =# link_to "на основе руибоса", section_path(Section.find_by_name('на основе руибоса').id) 
+       %li
+        = link_to "на основе полезных растений", section_path(Section.find_by_name('на основе полезных растений').id) 
+      %li
+       = link_to "Мате", section_path(Section.find_by_name('на основе мате и лапачо').id) 
+      %li
+       = link_to "Лапачо", section_path(Section.find_by_name('на основе мате и лапачо').id) 
+      %li
+       = link_to "Ройбуш", section_path(Section.find_by_name('на основе мате и лапачо').id) 
+      -#%li
+       =# link_to "на основе мате и лапачо", section_path(Section.find_by_name('на основе мате и лапачо').id) 
         %li
          = link_to "на основе улуна", section_path(Section.find_by_name('на основе улуна').id) 
       %li
        = link_to "Китайский элитный чай", section_path(Section.find_by_name('Китайский элитный чай').id)
-      %ul.lmenu
+      %ul.lmenu{:class=>"l2"}
        %li
         = link_to "Элитный китайский чай в баночках", section_path(Section.find_by_name('Элитный китайский чай в баночках').id) 
        %li
@@ -82,18 +88,18 @@
        %li
         = link_to "Жасминовый чай", section_path(Section.find_by_name('Жасминовый чай').id) 
        %li
-        = link_to "Пуэры", section_path(Section.find_by_name('Пуэры').id) 
-       %li
-        = link_to "Улуны материковые (китайские)", section_path(Section.find_by_name('Улуны материковые (китайские)').id) 
-       %li
         = link_to "Связанный чай", section_path(Section.find_by_name('Связанный чай').id) 
-       %li
-        = link_to "Традиционные чайные напитки", section_path(Section.find_by_name('Традиционные чайные напитки').id) 
+       -#%li
+        =# link_to "Традиционные чайные напитки", section_path(Section.find_by_name('Традиционные чайные напитки').id) 
        %li
         = link_to "Элитный чай Тайвань", section_path(Section.find_by_name('Элитный чай Тайвань').id) 
+       %li
+        = link_to "Пуэр", section_path(Section.find_by_name('Пуэры').id) 
+       %li
+        = link_to "Улун", section_path(Section.find_by_name('Улуны материковые (китайские)').id) 
       %li
        = link_to "Плантационный индийский и цейлонский чай", section_path(Section.find_by_name('Плантационный индийский и цейлонский чай').id)
-      %ul.lmenu
+      %ul.lmenu{:class=>"l2"}
        %li
         = link_to "Плантационный черный чай Индия", section_path(Section.find_by_name('Плантационный черный чай Индия').id) 
        %li
@@ -102,7 +108,7 @@
        = link_to "Фиточай", section_path(Section.find_by_name('Фиточай').id) 
       %li
        = link_to "Чай в пакетиках", section_path(Section.find_by_name('Чай в пакетиках').id) 
-      %ul.lmenu
+      %ul.lmenu{:class=>"l1"}
        %li
         = link_to "Чай пакетированный Флёр Деланж", section_path(Section.find_by_name('Чай пакетированный Флёр Деланж').id)
       %li
