--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -1,6 +1,6 @@
 - @products.each do |p|
  %div
-  = link_to(image_tag p.cover(:small), :style=>"float:left;padding: 10px;"), products_path(p.id)
+  = link_to(image_tag(p.cover(:small), :style=>"float:left;padding: 10px;"), products_path(p.id))
   %h3 #{p.name}
   #{p.short_descr}
   %div{:style=>"text-align:right;padding-top:15px;"} #{p.price}
