--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,7 +1,27 @@
 %p Пузырьки пара с шумом поднимаются в закипающей воде... Немножко заварки, потом еще чуть-чуть... Тепло обволакивает каждую чаинку, а затем...
-%p А затем начинается удивительное таинство... Волшебное рождение  ЧАЯ...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий аромат? Есть ровно 5 минут, чтоб достать красивые фарфоровые чашки и приготовиться к чаепитию.
-%p Сегодня это пуэр. Завтра утром будет жасминовый чай… Или же тонизирующий красный… А может, это будет молочный улун?  Вы хотите чего-то другого? Ищете отличный подарок? Вам сюда, выбирайте СВОЙ ЧАЙ. 
-%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь баночку хорошего чая.  Для дружеской беседы, семейного ужина, приятного одиночества и встречи  рассвета…
-В нашем магазине вы всегда сможете купить полюбившийся вам напиток. Пусть это будет всего несколько грамм, но это будет несколько  грамм действительно качественного и очень вкусного сорта чая. Побалуйте себя и своих близких!
-%p Чашечку чая?
+%p А затем начинается удивительное таинство... Волшебное рождение  <a href="/sections/1">ЧАЯ</a>...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий <a href="/sections/3">аромат</a>? Есть ровно 5 минут, чтоб достать красивые фарфоровые <a href="/sections/70">чашки</a> и приготовиться к <a href="/sections/66">чаепитию</a>.
+%p Сегодня это <a href="/sections/20">пуэр</a>. Завтра утром будет <a href="/sections/19">жасминовый чай</a>... Или же тонизирующий <a href="/sections/18">красный</a>... А может, это будет <a href="/sections/21">молочный улун</a>?  Вы хотите чего-то другого? Ищете <a href="/sections/61">отличный подарок</a>? Вам сюда, выбирайте СВОЙ ЧАЙ. 
+%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь <a href=="/sections/14">баночку хорошего чая</a>.
+%p В нашем магазине вы всегда сможете купить полюбившийся вам <a href="/sections/7">напиток</a>. Выбирайте неспеша свой чай: 
+%ul
+ %li Для хорошего самочувствия
+ %li Для бодрого утра
+ %li Для тихого вечера
+ %li Для веселой компании
+ %li Для семейного торжества
+ %li Для уютного одиночества
+ %li В подарок
+%p Пусть это будет всего несколько грамм, но это будет несколько  грамм действительно качественного и очень вкусного сорта чая. Побалуйте себя и своих близких!
+%div{:style=>"text-align:center;"} Чашечку чая?
+%p &nbsp;
+%div{:style=>"text-align:center;"} Или кофе? 
+%p Маленькая <a href="/sections/72">чашечка</a>, бесподобный <a href="/sections/38">аромат</a> и бархатная пенка... Для утонченных людей, имеющих свой неповторимый стиль... Для тех, кто знает, как ценны минуты по утрам... Для тех, кто умеет получать максимум удовольствия от жизни... Для тех, кто любит роскошь во всех её проявлениях...
+Черный, жгучий, манящий, дарящий тепло... Свежеобжаренные <a href="/sections/34">зерна</a> и дивный опьяняющий запах... Крошечный эспрессо или воздушный капучинно? Нежная робуста или крепкая арабика? Выбирайте свой <a href="/sections/2">кофе</a>, который подарит вам:
+%ul
+ %li Ясное бодрое утро
+ %li Прилив сил и работоспособности
+ %li Удачные деловые переговоры
+ %li Семейный приятный вечер
+ %li Тихое спокойное уединение
+%p Неважно, будете ли вы сами священнодействовать <a href="/sections/77">над туркой</a>, или доверитесь <a href="/sections/80">кофеварке</a>. Важен результат — только из качественных <a href="/sections/45">зерен</a> получается восхитительный будоражащий напиток. В нашем магазине вы можете купить как <a href="/sections/49">молотый кофе</a>, так и <a href="/sections/39">кофе в зернах</a>. Для себя или своих близких в подарок. И это будет поистине великолепный вкусный кофе!
 
