--- a/app/views/main/about.html.haml
+++ b/app/views/main/about.html.haml
@@ -1,2 +1,27 @@
+%div{:style=>"text-align:left;padding-left:400px;font-style:italic;"}
+ Я не знаю, как остальные,<br />
+ Но я чувствую жесточайшую<br />
+ Не по прошлому ностальгию –<br />
+ Ностальгию по настоящему.
+  
+%p Давайте познакомимся? 
+%p Нас двое.
+= image_tag 'IMG_1392-0.jpg', :style=>"float:left;padding:15px;width:150px;height:225px;"
+%p Катерина
+%p Любит настоящих людей, настоящую музыку и настоящий чай. Общительная, весёлая, б\вп, с ч\ю - весь комплект, о котором обычно принято упоминать на сайтах знакомств, прилагается. С удовольствием познакомится и пообщается со всеми, кто считает, что чай из пакетиков – это издевательство над благородным напитком и с теми, для кого пить чай – это не просто привычка, а настоящая церемония наслаждения.
+%div{:style=>"clear:both;"}
+= image_tag 'dsc00718.jpg', :style=>"float:right;padding:15px;width:150px;height:200px;"
+%p Ярослав.
+%p Психолог и бизнес-тренер. Выучил немало перворазрядников, кандидатов и мастеров этого вида спорта. Харизматичен, умён. Обожает составлять психологические портреты собеседников, которыми потом умело пользуется для втирания в доверие. После беседы с ним вы сами не заметите, как станете заваривать чай строго в глиняном чайнике ручной работы и будете по запаху отличать китайский чай от цейлонского. А ещё Ярослав, если его разговорить за чашечкой чая, может многое рассказать о правильном питании и здоровом образе жизни.
+%p Данный проект организован сразу с несколькими далеко идущими целями:
+%p Познакомиться с хорошими людьми
+%p Познакомить хороших людей с чайными новостями
+%p Приобщить заблудшие души к правильному чаю
+%p Научиться у более сведущих ценителей этого напитка тому, чего мы ещё не знаем
+%p Просто почаёвничать, зная, что по другую сторону монитора сидит родственная тебе душа
+%p Ещё Вы узнаете, какой сорт чая лучше подходит для поднятия настроения, а с каким лучше думается в одиночестве, что подаёте на стол во время детского чаепития и с чем лучше всего пить хороший чай.
+%p Мир чая многолик и разнообразен. Этот древний напиток проник во все сферы нашей с вами жизни и жизнь без него мы с вами не представляем. Без чая жизнь будет уже не та.
+%p Так что, давайте, нальём себе «чайковского» - кто какой любит и приступим к самому интересному...
+%p P.S. Да, об эпиграфе. В мире всё меньше становится настоящего. Кругом пластик, генно-модифицированные продукты, химия... Давайте, сохраним в себе как можно больше настоящего – в том числе и при помощи настоящего чая.
 
 
