--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -1,8 +1,15 @@
 - @products.each do |p|
- %div
-  = link_to(image_tag(p.cover(:small), :style=>"float:left;padding: 10px;"), products_path(p.id))
-  %h3 #{p.name}
-  #{p.short_descr}
-  %div{:style=>"text-align:right;padding-top:15px;"} #{p.price}
-  %div{:style=>":height:20px;clear: both;"}
+ %div{:style=>"width:160px;height:200px;float:left;"}
+  = link_to(image_tag(p.cover(:small), :style=>"padding: 10px;border:0px;"), product_path(p.id))
+  %div{:style=>"padding-left:10px;"}
+   = form_tag cart_index_path, {:method=>:post} do
+    = hidden_field_tag :product, p.id
+    %select{:id=>"ammount", :name=>"amount"}
+     -(1..9).each do |i|
+      %option{:value=>i.to_s} #{i.to_s}
+    = submit_tag "Купить", :style=>"padding:1px;font:18px bold verdana;color:#00a651;background:transparent;"
+ %h3 #{p.name}
+ #{p.short_descr}
+ %div{:style=>"padding-top:15px;"} Цена #{p.price} руб.
+ %div{:style=>":height:20px;clear: both;"}
 = will_paginate(@products)
