--- a/public/stylesheets/imp.css
+++ b/public/stylesheets/imp.css
@@ -35,7 +35,7 @@ a:visited:hover.umenu {
 }
 .l1 {
  list-style-image: url('/images/Right.png');
- font: 14px verdana;
+ font: 14px bold verdana;
 }
 
 .l2 {
